forgot to add the file

--- a/reviews/reviewer-3.tex
+++ b/reviews/reviewer-3.tex
@@ -97,9 +97,9 @@ Zalesak, Steven T. "Introduction to "Flux-corrected transport. I. SHASTA,
 a fluid transport algorithm that works"." Journal of Computational Physics
 135.2 (1997): 170-171.}
 
-We rewrote the second paragraph of the introduction dealing with the stabilization tehcniques
-\tcr{in order to discuss and include additional references}. Thank you for pointing this out.
-\tcr{have you read Bram van Leer 2006 and added something related to this?} \tcb{I added the paper by Bram van Leer}
+We rewrote the second paragraph of the introduction dealing with the stabilization techniques
+in order to discuss and include additional references in lines 20 and 21. Thank you for pointing this out.
+%\tcr{have you read Bram van Leer 2006 and added something related to this?} \tcb{I added the paper by Bram van Leer}
 
 \bigskip
 
@@ -119,8 +119,8 @@ method for supersonic reacting flows with shocks." Journal of
 Computational Physics 222.1 (2007): 246-264.}
 
 Thank you for these references. In these articles, an artificial viscosity is added to the momentum
-and energy equations only, by means of grid-dependent viscosity coefficients. These techniques share some common thread and we have added some references to them in the introduction \tcr{Do it}. \tcb{done}
-However, as Guermond \& Popov have shown in our References \cite{jlg1, jlg2}, viscosity should also be added to the continuity equation and, in that sense, the entropy-viscosity method differ from the others. \\
+and energy equations only, by means of grid-dependent viscosity coefficients. These techniques share some common thread and we have added some references to them in the introduction between lines 26 and 28.
+However, as Guermond \& Popov have shown in our References \cite{jlg1, jlg2}, viscosity should also be added to the continuity equation and, in that sense, the entropy-viscosity method differ from the others.\\
 We are also aware of some of ongoing work to employ entropy-viscosity for turbulence modeling \tcr{Travis Thomson dissertation} and added such a reference \tcr{Do it}. \tcb{not done}
  %understanding of the work of Cook and Cabot is that it was developed for both shock and turbulence capturing. The entropy viscosity method seems to be a good candidate for turbulence capturing as well . However, since this paper does not deal with turbulence capturing but only with shock capturing, we feel that the reader might get confused by adding the above references.
 \bigskip
@@ -137,7 +137,7 @@ conditions for shocks." Communications on pure and applied mathematics
 29.3 (1976): 297-322. 
 }
 
-We added the two above references to the introduction. We had initially referenced Leveque's work. Thank you for pointing this out.
+We added the two above references to the introduction in line 17. We had initially referenced Leveque's work. Thank you for pointing this out.
 \bigskip
 
 
@@ -157,7 +157,7 @@ for linearly degenerate waves in capturing schemes." Journal of
 Computational Physics 227.14 (2008): 6985-7002.
 }
 
-Thank you for pointing out the above references. We have added these references to the paper in the numerical results section. \tcr{will need to highlight this in the final PDF we re-submit}
+Thank you for pointing out the above references. We have added these references to the paper in the numerical results section in line 359. \tcr{will need to highlight this in the final PDF we re-submit}
 \bigskip
 
 
@@ -175,7 +175,7 @@ would seem to be the relevant one for the dynamics.
 We have adopted this terminology for the bounding viscosity. This is more natural and
 will help the readership of our article. \\
 You are correct that only using this bounding viscosity for low-Mach flows is inappropriate.  
-The bounding viscosity is expected to kick in only in shocks; elsewhere the entropy viscosity is always orders of magnitude lower. Since this is only an upper bound, there are no issues in low-Mach flows. \tcr{We have added a sentence to emphasize this}. \tcb{ok}
+The bounding viscosity is expected to kick in only in shocks; elsewhere the entropy viscosity is always orders of magnitude lower. Since this is only an upper bound, there are no issues in low-Mach flows. We have added a sentence to emphasize this in line 493.
 \bigskip
 
 
@@ -200,7 +200,6 @@ standards of publication. These should be improved.
 }
 
 We improved the quality of the 2-D plots that are presented in the numerical results section. 
-%and hope they now up to the standards of publication.
 \bigskip
 
 
