added a comment for the y-axis of the viscosity plot

--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -1416,7 +1416,7 @@ with exact solution in \fig{fig:1d_strong_shock_var}.
 The viscosity coefficients $\mu$ and $\kappa$ 
 are not equal in the shock because the Mach number is of order $0.1$. The viscosity coefficient $\kappa$ 
 saturates to the first-order viscosity in the shock region around $x = 0.65m$ and is sufficient to 
-stabilize the numerical scheme. 
+stabilize the numerical scheme. Values of the viscosity coefficients below $10^{-5}$ are not plotted.
 %
 \begin{figure}[H]
         \centering
