--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -1,5 +1,5 @@
 @article{cabot,
-  title   = "Hyperviscosity for shock turbulence interactions",
+  title   = "Hyper-viscosity for shock turbulence interactions",
   author  = "A W Cook and W H Cabot",
   journal = "Journal of Computational Physcics",
   volume  = "203",
@@ -101,7 +101,7 @@
 }
 
 @article{valentin,
-  title   = "Implementation of the entropy viscosity method with the discontinuous Galerkin method",
+  title   = "Implementation of the entropy viscosity method with the discontinuous {G}alerkin method",
   author  = "V Zingan and J L Guermond and J Morel and B Popov",
   journal = "Journal of Comput. Phys",
   volume  = "253",
@@ -153,7 +153,7 @@ address   = "Basel"
   }
 
 @article{jlg,
-  title   = "Viscous regularization of the Euler equations and entropy principles",
+  title   = "Viscous regularization of the {E}uler equations and entropy principles",
   author  = "J L Guermond and B Popov",
   journal = "under review",
   year    = "2012",
@@ -169,7 +169,7 @@ address   = "Basel"
   }
 
 @article{JFNK,
-  title   = "Jacobian-free Newton-Krylov methods: a survey of approaches and applications",
+  title   = "Jacobian-free {N}ewton-{K}rylov methods: a survey of approaches and applications",
   author  = "D A Knoll and D E Keyes",
   journal = "Journal of Computational Physics",
   volume  = "193",
@@ -178,7 +178,7 @@ address   = "Basel"
   }
   
 @article{SEM,
-  title   = "The discrete equation method (DEM) for fully compressible, two-phase flows in ducts of spatially varying cross-section",
+  title   = "The discrete equation method ({DEM}) for fully compressible, two-phase flows in ducts of spatially varying cross section",
   author  = "R Berry and R Saurel and O LeMetayer",
   journal = "Nuclear Engineering and Design",
   volume  = "240",
@@ -187,7 +187,7 @@ address   = "Basel"
   }
 
 @article{Parabolic,
-  title   = "On positivity preserving finite volume schemes for Euler equations",
+  title   = "On positivity preserving finite volume schemes for {E}uler equations",
   author  = "B Perthane and C W Shu",
   journal = "Numer. Math.",
   volume  = "73",
@@ -196,7 +196,7 @@ address   = "Basel"
   }
 
 @book{IGEOS,
-  title   = "A to Z of Thermodynamics",
+  title   = "{A} to {Z} of {T}hermodynamics",
   author = "P Perrot",
   year      = "1998",
   publisher = "Oxford University Press",
@@ -237,14 +237,14 @@ address   = "Basel"
   }
 
 @book{PBV_book,
-  title   = "Applied CFD Techniques: an Introduction based on Finite Element Methods",
+  title   = "Applied {CFD} Techniques: an Introduction based on Finite Element Methods",
   author = "R Lohner",
   year      = "2003",
   publisher = "$2^{nd}$ Edition Wiley",
   }
 
 @article{Roe,
-  title   = "An All-Speed Roe-type scheme and its asymptotic analysis of low Mach number behavior",
+  title   = "An All-Speed Roe-type scheme and its asymptotic analysis of low-{M}ach number behavior",
   author  = "X-S Li and C-W Gu",
   journal = "Journal of Computational Physics",
   volume  = "227",
@@ -253,7 +253,7 @@ address   = "Basel"
   }
 
 @article{LowMach1,
-  title   = "On the behavior of upwind schemes in the low Mach number limit",
+  title   = "On the behavior of upwind schemes in the low-{M}ach number limit",
   author  = "H Guillard and C Viozat",
   journal = "Computers \& Fluids",
   volume  = "28",
@@ -271,7 +271,7 @@ address   = "Basel"
   }
 
 @article{LowMach3,
-  title   = "The solution of the compressible Euler equations at low Mach numbers using a stabilized finite element algorithm",
+  title   = "The solution of the compressible {E}uler equations at low-{M}ach numbers using a stabilized finite element algorithm",
   author  = "J S Wong D L and Darmofal and J Peraire",
   journal = "Comput. Methods Appl. Mech. Engrg.",
   volume  = "190",
@@ -290,7 +290,7 @@ Mechanic.",
   }
 
 @article{Hump,
-  title   = "A Robust Multigrid Algorithm for the Euler Equations with Local Preconditioning and Semi-coarsening",
+  title   = "A Robust Multigrid Algorithm for the {E}uler Equations with Local Preconditioning and Semi-coarsening",
   author  = "D L Darmofal and K Siu",
   journal = "Journal of Computational Physics",
   volume  = "151",
@@ -305,8 +305,8 @@ Mechanic.",
   }
 
 @article{Muller,
-  title   = "Low-Mach number asymptotes of the Navier-Stokes equations",
-  author  = "B Muller",
+  title   = "Low-Mach number asymptotics of the Navier-Stokes equations",
+  author  = "B M\''uller",
   journal = "Journal of Engineering Mathematics",
   volume  = "34",
   pages   = "97-109",
@@ -322,7 +322,7 @@ Mechanic.",
   }
 
 @book{FluxLimiter2,
-  title   = "Discontinuous Galerkin methods: theory, computation and applications",
+  title   = "Discontinuous {G}alerkin methods: theory, computation and applications",
   author  = "B Cockburn and G Karniadakis and C Shu",
   journal = "Lecture Notes in Computer Science and Engineering",
   volume  = "11",
@@ -402,3 +402,34 @@ Mechanic.",
   year    = "1953"
   }
   
+@article{VonNeumannRichtmyer,
+   author = "VonNeumann, J. and Richtmyer, R. D.",
+   title = "A Method for the Numerical Calculation of Hydrodynamic Shocks",
+   journal = "Journal of Applied Physics",
+   year = "1950",
+   volume = "21",
+   number = "3", 
+   pages = "232-237"
+}
+
+@article{Reisner2013,
+title = "A space–time smooth artificial viscosity method for nonlinear conservation laws ",
+journal = "Journal of Computational Physics ",
+volume = "235",
+number = "0",
+pages = "912 - 933",
+year = "2013",
+author = "J. Reisner and J. Serencsa and S. Shkoller"
+}
+
+
+@article{darmofal2010,
+title = "Shock capturing with PDE-based artificial viscosity for DGFEM: Part I. Formulation ",
+journal = "Journal of Computational Physics ",
+volume = "229",
+number = "5",
+pages = "1810 - 1827",
+year = "2010",
+author = "Garrett E. Barter and David L. Darmofal"
+}
+
