--- a/reviews/reviewer-3.tex
+++ b/reviews/reviewer-3.tex
@@ -119,9 +119,10 @@ method for supersonic reacting flows with shocks." Journal of
 Computational Physics 222.1 (2007): 246-264.}
 
 Thank you for these references. In these articles, an artificial viscosity is added to the momentum
-and energy equations only, by means of grid-dependent viscosity coefficients. These techniques share some common thread and we have added some references to them in the introduction between lines 26 and 28.
+and energy equations only, by means of grid-dependent viscosity coefficients. These techniques share some common thread with
+the entropy viscosity technique and we have added some references to them in the introduction between lines 26 and 28.
 However, as Guermond \& Popov have shown in our References \cite{jlg1, jlg2}, viscosity should also be added to the continuity equation and, in that sense, the entropy-viscosity method differ from the others.\\
-We are also aware of some of ongoing work to employ entropy-viscosity for turbulence modeling \tcr{Travis Thomson dissertation} and added such a reference \tcr{Do it}. \tcb{not done}
+We are also aware of some of ongoing work to employ the entropy-viscosity technique for turbulence modeling \tcr{Travis Thomson dissertation} and added such a reference \tcr{Do it}. \tcb{not done}
  %understanding of the work of Cook and Cabot is that it was developed for both shock and turbulence capturing. The entropy viscosity method seems to be a good candidate for turbulence capturing as well . However, since this paper does not deal with turbulence capturing but only with shock capturing, we feel that the reader might get confused by adding the above references.
 \bigskip
 
@@ -173,7 +174,7 @@ would seem to be the relevant one for the dynamics.
 }
 
 We have adopted this terminology for the bounding viscosity. This is more natural and
-will help the readership of our article. \\
+will help the reader. \\
 You are correct that only using this bounding viscosity for low-Mach flows is inappropriate.  
 The bounding viscosity is expected to kick in only in shocks; elsewhere the entropy viscosity is always orders of magnitude lower. Since this is only an upper bound, there are no issues in low-Mach flows. We have added a sentence to emphasize this in line 493.
 \bigskip
@@ -209,9 +210,19 @@ We improved the quality of the 2-D plots that are presented in the numerical res
 numerical accuracy and order of convergence of the method would be
 quite welcome.
 }
-The compression corner yields a steady-state solution whose analytical values are known. We compare the numerical values agains the analytical ones and show that they match. We did not perform any convergence order as an analytical solution is not available to us. We could have performed a convergence test by using a numerical solution from a fine mesh as a reference and see if we recover the expected order of convergence, as it is done for some of the 1-d tests in the paper. \\
+The compression corner yields a steady-state solution whose analytical pre- and post-shocks values are known. 
+We compared our numerical simulation values against these values and show excellent agreement. 
+We did not perform any convergence order as an analytical solution is not available. 
+\tcr{I do not want to use a fine mesh numerical solution as reference because I cannot be assured it will be a good
+enough reference to do a convergence study. what do you think?\\}
+Likewise, from potential flow theory, we know the exact value of the velocity at the top of the cylinder for the flow around a 
+cylinder problem; we compared our numerical values with the exact ones and they are in excellent agreement.
+With the meshes used, we have obtained an pressure variation that is exactly proportional to Mach$^2$, as expected from the theory.
+%We could have performed a convergence test by using a numerical solution from a fine mesh as a reference and see if we recover the expected order of convergence, as it is done for some of the 1-d tests in the paper. \\
 
-The test of a flow over a hump is often used in the literature to assess the symmetry of the steady-state solution when plotting the iso-Mach line by using an eyeball norm. This is also commonly used for other test such as the NACA wing in \cite{LowMach1}.
+The test of a flow over a hump is the only test we do not have an exact solution for \tcr{is there one?}.
+This test is often used in the literature to assess the symmetry of the steady-state solution when plotting the iso-Mach line 
+for low-Mach flows. This is also commonly used for other test such as the NACA wing in \cite{LowMach1}.
 \bigskip
 
 \bibliography{mybibfile}
