--- a/reviews/reviewer-3.tex
+++ b/reviews/reviewer-3.tex
@@ -214,13 +214,13 @@ The compression corner yields a steady-state solution whose analytical pre- and 
 We compared our numerical simulation values against these values and show excellent agreement. 
 We did not perform any convergence order as an analytical solution is not available. 
 \tcr{I do not want to use a fine mesh numerical solution as reference because I cannot be assured it will be a good
-enough reference to do a convergence study. what do you think?\\}
+enough reference to do a convergence study. what do you think?\\} \tcb{we can probably run the code with a very fine mesh but it will take time and we are not sure that it will be fine enough to do the convergence test.\\}
 Likewise, from potential flow theory, we know the exact value of the velocity at the top of the cylinder for the flow around a 
 cylinder problem; we compared our numerical values with the exact ones and they are in excellent agreement.
 With the meshes used, we have obtained an pressure variation that is exactly proportional to Mach$^2$, as expected from the theory.
 %We could have performed a convergence test by using a numerical solution from a fine mesh as a reference and see if we recover the expected order of convergence, as it is done for some of the 1-d tests in the paper. \\
 
-The test of a flow over a hump is the only test we do not have an exact solution for \tcr{is there one?}.
+The test of a flow over a hump is the only test we do not have an exact solution for \tcr{is there one?}. \tcb{you can only compare against the numerical solution from an incompressible code (in the low-Mach limit).}
 This test is often used in the literature to assess the symmetry of the steady-state solution when plotting the iso-Mach line 
 for low-Mach flows. This is also commonly used for other test such as the NACA wing in \cite{LowMach1}.
 \bigskip
