--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -1943,7 +1943,7 @@ We first write the variable-area equations with dissipative terms:
 \end{equation}
 % 
 \begin{equation}
-\partial_t \left( \rho E A \right) + \div \left[ \vec{u} A \left( \rho E + P \right) \right] = \div (\vec{h}+ \vec{u} \cdot\mathbb{g})  \,.
+\partial_t \left( \rho E A \right) + \div \left[ \vec{u} A \left( \rho E + P \right) \right] = \div (\vec{h}+ \tcr{\mathbb{g} \cdot \vec{u}} )  \,.
 \end{equation}
 \end{subequations}
 %
@@ -1956,37 +1956,37 @@ are similar to those used for the standard Euler equations \cite{jlg}. Some of t
 %
 \begin{equation}
 \label{eq:ent_res_app}
-A \rho \left( \partial_t s + \vec{u} \cdot \grad s \right) = s_e \left[ \div\vec{h}+\mathbb{g}: \grad u + \left( \frac{u^2}{2}-e \right) \div\vec{f}\right] 
+A \rho \left( \partial_t s + \vec{u} \cdot \grad s \right) = s_e \left[ \div\vec{h} + \mathbb{g}: \grad \tcr{\vec{u}} + \left( \frac{u^2}{2}-e \right) \div\vec{f}\right] 
 + \rho s_{\rho} \div\vec{f}\,. 
 \end{equation}
 %
 The next step consists of choosing a definition for each of the dissipative terms so that the left hand-side is positive. 
 The right-hand side of \eqt{eq:ent_res_app} can be simplified using the relations \tcr{($\rho$ was missing in  $\mathbb{g}$)}
-$\mathbb{g} = A \rho \mu \grad^s \vec{u} +\vec{f}\otimes \vec{u}$ 
-and $\vec{h} = \vec{\tilde{h}} - 0.5 \| \vec{u} \|^2 f$ to give
+$\mathbb{g} = A \tcr{\rho} \mu \grad^s \vec{u} +\vec{f}\otimes \vec{u}$ 
+and $\vec{h} = \vec{\tilde{h}} -\tfrac{1}{2} \| \vec{u} \|^2 \tcr{\vec{f}}$ to give
 %
 \begin{equation}
 \label{eq:ent_res_app2}
-A \rho \left( \partial_t s + \vec{u} \cdot \div s \right) = s_e \left[ \div \vec{\tilde{h}}-e \div\vec{f}\right] + \rho s_{\rho} \div\vec{f} + A s_e \mu \grad \vec{u}^s : \grad \vec{u} \,. 
+A \rho \left( \partial_t s + \vec{u} \cdot \div s \right) = s_e \left[ \div \vec{\tilde{h}}-e \div\vec{f}\right] + \rho s_{\rho} \div\vec{f} + A s_e \mu \grad^s \vec{u} : \grad \vec{u} \,. 
 \end{equation}
 %
+where $\grad^s$ is the symmetric gradient. 
 The right-hand side is now integrated by parts:
 %
 \begin{multline}
 \label{eq:ent_res_app3}
 A \rho \left( \partial_t s + \vec{u} \cdot \div s \right) = \div \left[ s_e \vec{\tilde{h}}-s_e e\vec{f} + \rho s_{\rho}\vec{f}\right]  \\
--\div \vec{\tilde{h}} \grad s_e  +\vec{f}\cdot \grad (e s_e) - \vec{f}\cdot \grad ( \rho s_{\rho} ) + A s_e \mu \grad^s \vec{u} : \grad \vec{u} 
+- \tcr{ \vec{\tilde{h}} \cdot \grad s_e}  + \vec{f}\cdot \grad (e s_e) - \vec{f}\cdot \grad ( \rho s_{\rho} ) + A s_e \mu \grad^s \vec{u} : \grad \vec{u} 
 \end{multline}
 %
-where $\grad^s$ is the symmetric gradient. The term $A s_e \mu \grad^s \vec{u} : \grad \vec{u}$ is positive and thus, 
-does not need any further modification. It %
-remains to treat the other terms of the right-hand side that we now call $rhs$:
+The term $A s_e \mu \grad^s \vec{u} : \grad \vec{u}$ is positive and thus, 
+does not need any further manipulations. It remains to treat the other terms of the right-hand side that we now call $rhs$:
 %
 \begin{equation}
 rhs = \div \left[ s_e \vec{\tilde{h}}-s_e e\vec{f} + \rho s_{\rho}\vec{f}\right] - \vec{\tilde{h}} \cdot \grad s_e  +\vec{f}\cdot \grad (e s_e) -\vec{f}\cdot \grad ( \rho s_{\rho} )  \,. \nonumber
 \end{equation}
 %
-The first term in $rhs$ is a conservative term. By carefully choosing a definition for $\vec{\tilde{h}}$ and $\vec{f}$, the 
+The first term in $rhs$ is a conservative term. By carefully choosing a definition for $\vec{\tilde{h}}$ and $\vec{f}$, this 
 conservative term can be expressed as a function of the entropy $s$. The inclusion of the variable area in the 
 choice of the dissipative terms is also required so that, when assuming a constant area, the standard Euler 
 equations are recovered. The following definitions for $\vec{\tilde{h}}$ and $\vec{f}$ are chosen:
@@ -2001,7 +2001,7 @@ which yields, using the chain rule,
 rhs = \div (\rho A \kappa \grad s ) - A \kappa \underbrace{\left[ \grad (\rho e) \grad s_e  - \grad \rho \grad (e s_e) +  \grad \rho \grad ( \rho s_{\rho} )  \right]}_{\mathbf{Q}} \nonumber
 \end{equation}
 %
-It remains to treat the term $\mathbf{Q}$ that can be recast under a quadratic form. Following \cite{jlg}, one obtain:
+We now deal with the term $\mathbf{Q}$ and note it can be recast as a quadratic form. One obtains:
 %
 \begin{eqnarray}
 \mathbf{Q} &=& \rho X^t \Sigma X \nonumber \\
@@ -2016,10 +2016,10 @@ It remains to treat the term $\mathbf{Q}$ that can be recast under a quadratic f
 \end{eqnarray}
 %
 The matrix $\Sigma$ is symmetric and identical to the matrix obtained in \cite{jlg}. The sign of the quadratic form 
-can be simply determined by studying the positiveness of the matrix $\Sigma$. In this particular case, we have 
-to prove that the matrix is negative definite since the quadratic form is on the right-hand side of the residual expression and it is preceded by a negative 
+can be simply determined by studying the positiveness of matrix $\Sigma$. In this particular case, we have 
+to prove that this matrix is negative definite since the quadratic form is on the right-hand side of the residual expression and it is preceded by a negative 
 sign. According to \cite{jlg}, the convexity of the opposite of the entropy function, i..e, $-s$, with respect to the internal energy $e$ 
-and the specific volume $1/ \rho$ is sufficient to ensure that the matrix $\Sigma$ is negative definite. \\
+and the specific volume $1/ \rho$ is sufficient to ensure that matrix $\Sigma$ is negative definite. \\
 Finally, the right-hand side of the entropy residual \eqt{eq:ent_res_app} has now been expressed as the sum of a conservative term and another term known to be positive. Thus, the entropy minimum principle holds.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
