--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -213,9 +213,9 @@ the ability to capture and track shocks, accuracy and solution convergence in th
 %
 It is well known that, even with smooth initial data, the existence of a 
 globally smooth solution to hyperbolic conservative laws may not occur because of the nonlinearity of the flux functions. Spurious
-oscillations can occur with high order spatial discretization schemes due to shocks, discontinuities, or sharp changes in the solution and thus,
+oscillations can occur with high order spatial discretization schemes due to shocks, discontinuities, or sharp changes in the solution. Thus,
 adequate numerical techniques are required to stabilize the numerical solution
-and correctly resolve discontinuities \cite{lax-peter, harten-hyman} \tcr{should these reference stay here or go with the previous sentence?}. \tcb{we should merge them into one sentence and add the references at the end}
+and correctly resolve discontinuities \cite{lax-peter, harten-hyman}.
 %
  
 %
@@ -223,23 +223,23 @@ and correctly resolve discontinuities \cite{lax-peter, harten-hyman} \tcr{should
 These numerical methods can be typified into two categories. The first category consists of artificial viscosity methods and Riemann-based solvers and is widely described in the literature \cite{van-leer, neumann, Lapidus_paper, LMP, Lapidus_book, PBV_book, Toro}. The second category relies on flux limiters techniques that takes its origin to the paper by Zalesak \cite{fct-zalesak}.\\
 I am trying to change this, below. What do you think?\\}
 \tcb{
-A variety of discretization schemes have been developed and employed to solve hyperbolic conservation laws. These include, but are not limited to,
+A variety of discretization schemes have been developed and employed to solve hyperbolic conservation laws. These include 
 total variation diminishing (TVD) schemes, weighted essentially non-oscillatory  (WENO) schemes, exact (Godunov) and approximate Riemann solvers, flux-corrected transport (FCT) schemes, artificial diffusion methods, etc.. Essentially non-oscillatory schemes and Riemann solvers differ in the reconstruction technique and the choice of numerical 
 fluxes employed to evolve cell-averaged quantities \cite{van-leer, neumann, Lapidus_paper, LMP, Lapidus_book, PBV_book, Toro}.  
 % 
 In order to ensure uniqueness of the weak (numerical) solution, an ``entropy condition'' is imposed. In practice, this is achieved
 by adding an appropriate amount of dissipation (artificial viscosity), either implied by the discretization or explicitly. Artificial viscosity 
-techniques explicitly introduce diffusion to stabilize numerical schemes, often in the form of a Laplacian operator acting on the solution variables with a viscosity coefficient that depends on the grid size and the wave speeds. This idea can be traced back to Von Neumann and Richtmyer \cite{VonNeumannRichtmyer}. Recently, Reisner et al. \cite{Reisner2013} and Barter and Darmofal \cite{darmofal2010} proposed PDE-based artificial viscosity methods, whereby an additional scalar PDE equations was coupled to the 
-system of conservation laws and whose solution was the local viscosity coefficient. 
+techniques explicitly introduce diffusion to stabilize numerical schemes, often in the form of a Laplacian operator acting on the solution variables with a viscosity coefficient that depends on the grid size and the wave speeds. This idea can be traced back to Von Neumann and Richtmyer \cite{VonNeumannRichtmyer}. Recently, Reisner et al. \cite{Reisner2013} and Barter and Darmofal \cite{darmofal2010} proposed PDE-based artificial viscosity methods, whereby an additional scalar PDE equation is coupled to the 
+system of conservation laws and whose solution serves as the local viscosity coefficient. 
 Guermond et al. \cite{jlg1, jlg2} have developed the entropy viscosity method, an entropy residual-based artificial viscosity method where the viscosity coefficient 
-depends on the local entropy production; their viscous regularization method is constructed so as to satisfy the entropy minimum principle. 
+depends on the local entropy production; their viscous regularization method is constructed to satisfy the entropy minimum principle. 
 Hyper-viscosity techniques also fall in the category of artificial viscosity methods and have been applied to shock-turbulence stabilization \cite{cabot, fiorani}.
 %
 %A wide range of stabilization methods exists and can be classified into two main categories: approximate Riemann or Godunov type solvers \cite{Toro}, flux-limiter techniques \tcr{I do not consider FCT to be a stab. metehod}
 %\cite{FluxLimiter, FluxLimiter2, fct-zalesak, fct-kuzmin-lohner}, and artificial viscosity methods \cite{neumann} such as pressure-based viscosity methods \cite{PBV_book} and Lapidus method \cite{Lapidus_paper, LMP, Lapidus_book}, among others. 
 In this paper, we improve upon the Entropy Viscosity Method (EVM) by extending it to low-Mach flows while keeping its shock-capturing properties 
 for transonic and supersonic flows. In the EVM, adequate dissipation terms (viscous fluxes)
-are added to the all of the governing laws while ensuring the entropy minimum principle still holds. 
+are added to all of the governing laws while ensuring the entropy minimum principle still holds. 
 }
 
 Numerical methods are usually developed using simple equations 
