--- a/reviews/reviewer-3.tex
+++ b/reviews/reviewer-3.tex
@@ -212,7 +212,7 @@ quite welcome.
 }
 The compression corner yields a steady-state solution whose analytical pre- and post-shocks values are known. 
 We compared our numerical simulation values against these values and show excellent agreement. 
-We did not perform any convergence order as an analytical solution is not available. 
+We did not perform any convergence order as an analytical solution is not available \tcr{not true. also check at what angle a Mach stem begins}. 
 \tcr{I do not want to use a fine mesh numerical solution as reference because I cannot be assured it will be a good
 enough reference to do a convergence study. what do you think?\\} \tcb{we can probably run the code with a very fine mesh but it will take time and we are not sure that it will be fine enough to do the convergence test.\\}
 Likewise, from potential flow theory, we know the exact value of the velocity at the top of the cylinder for the flow around a 
